# HMPI

./: README
config/: ompi_check_ucg.m4  ompi_check_ucx.m4  orte_check_donau.m4
contrib/platform/mellanox/: optimized  optimized.conf
ompi/datatype/: ompi_datatype.h  ompi_datatype_create.c
ompi/mca/coll/ucg/: Makefile.am  coll_ucg.h  coll_ucg_allgatherv.c  coll_ucg_allreduce.c  coll_ucg_alltoallv.c  coll_ucg_barrier.c  coll_ucg_bcast.c  coll_ucg_component.c  coll_ucg_debug.h  coll_ucg_dt.c  coll_ucg_dt.h  coll_ucg_gatherv.c  coll_ucg_module.c  coll_ucg_request.c  coll_ucg_request.h  coll_ucg_scatterv.c  configure.m4  owner.txt
ompi/mca/coll/ucx/: Makefile.am  coll_ucx.h  coll_ucx_component.c  coll_ucx_datatype.c  coll_ucx_datatype.h  coll_ucx_freelist.h  coll_ucx_module.c  coll_ucx_op.c  coll_ucx_request.c  coll_ucx_request.h  configure.m4
ompi/mca/io/romio321/romio/adio/ad_oceanfs/: ad_oceanfs_aggrs.c
ompi/mca/pml/ucx/: pml_ucx.c  pml_ucx.h  pml_ucx_datatype.c  pml_ucx_request.c  pml_ucx_request.h
ompi/runtime/: ompi_mpi_init.c
opal/mca/hwloc/hwloc201/hwloc/hwloc/: topology-linux.c
opal/mca/pmix/pmix3x/: pmix3x.h  pmix3x_component.c
opal/mca/pmix/pmix3x/pmix/src/client/: pmix_client.c
orte/mca/ess/base/: help-ess-base.txt
orte/mca/ess/donau/: Makefile.am  configure.m4  ess_donau.h  ess_donau_component.c  ess_donau_module.c
orte/mca/ess/pmi/: ess_pmi_module.c
orte/mca/ess/singleton/: ess_singleton_component.c
orte/mca/grpcomm/: grpcomm.h
orte/mca/grpcomm/brucks/: grpcomm_brucks_component.c  grpcomm_brucks_module.c
orte/mca/grpcomm/rcd/: grpcomm_rcd.c
orte/mca/plm/donau/: Makefile.am  configure.m4  help-plm-donau.txt  plm_donau.h  plm_donau_component.c  plm_donau_module.c
orte/mca/plm/rsh/: plm_rsh_module.c
orte/mca/ras/base/: ras_base_allocate.c
orte/mca/ras/donau/: Makefile.am  configure.m4  help-ras-donau.txt  ras_donau.h  ras_donau_component.c  ras_donau_module.c
orte/mca/rmaps/base/: rmaps_base_map_job.c
orte/mca/rmaps/rank_file/: rmaps_rank_file.c  rmaps_rank_file_component.c
orte/mca/schizo/donau/: Makefile.am  configure.m4  schizo_donau.c  schizo_donau.h  schizo_donau_component.c
orte/orted/: orted_submit.c
orte/orted/pmix/: pmix_server_fence.c
orte/runtime/: orte_globals.c  orte_globals.h  orte_init.c
orte/runtime/data_type_support/: orte_dt_compare_fns.c  orte_dt_copy_fns.c  orte_dt_packing_fns.c  orte_dt_print_fns.c  orte_dt_unpacking_fns.c
orte/test/mpi/: interlib.c
